--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,20 @@
 ---
-
+	import Test from '../components/test.svelte'
 ---
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Astro</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet"> 
+		<style global>
+			@import '../styles/global.css'
+		</style>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Test />
 	</body>
 </html>
