--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+	@apply w-full h-full;
+	font-size: 15px;
+}
+
+main  { grid-area: main; }
+footer { grid-area: footer; }
+
+body {
+	display: grid;
+	grid-template-rows: 1fr min-content;
+	grid-template-areas: 
+		"main"
+		"footer";
+}
